[gd_scene load_steps=4 format=3 uid="uid://rmojoseggfgq"]

[ext_resource type="PackedScene" uid="uid://dmiaekpq8rmha" path="res://Scenes/MenuScenes/AssetScenes/CustomButton.tscn" id="1_jb5a7"]
[ext_resource type="Script" path="res://Scripts/MenuScripts/LanguageMenu.gd" id="1_pw3uj"]
[ext_resource type="Texture2D" uid="uid://bwimom06a2td8" path="res://Assets/Menu/CustomButton/whiteSquare.png" id="2_ilvhb"]

[node name="LanguageMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pw3uj")

[node name="GeneralVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -848.0
offset_top = 78.0
offset_right = 833.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 250

[node name="HBoxContainer2" type="HBoxContainer" parent="GeneralVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500

[node name="MenuName" type="Label" parent="GeneralVBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 90
text = "SELECT_LANGUAGE"

[node name="ErrorLabel" type="Label" parent="GeneralVBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GeneralVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="LanguagesHBox" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 300

[node name="Language" type="Label" parent="GeneralVBoxContainer/VBoxContainer/LanguagesHBox"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="GeneralVBoxContainer/VBoxContainer/LanguagesHBox"]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
flat = true
alignment = 1
item_count = 1
popup/item_0/text = "2 players"
popup/item_0/id = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/LanguagesHBox/OptionButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(446.625, 60)
scale = Vector2(5.30111, 1.12667)
texture = ExtResource("2_ilvhb")

[node name="HBoxContainer" type="HBoxContainer" parent="GeneralVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 130

[node name="ReturnButton" parent="GeneralVBoxContainer/HBoxContainer" instance=ExtResource("1_jb5a7")]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "RETURN"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/HBoxContainer/ReturnButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(367, 60)
scale = Vector2(4.59333, 1.12667)
texture = ExtResource("2_ilvhb")

[connection signal="item_selected" from="GeneralVBoxContainer/VBoxContainer/LanguagesHBox/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="GeneralVBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
